arr/nzbdav/nzbdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbdav-loadbalancer
  namespace: arr
  labels:
    app.kubernetes.io/name: nzbdav
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: arr
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.4
  externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: nzbdav
    app.kubernetes.io/part-of: arr
---
apiVersion: v1
kind: Service
metadata:
  name: nzbdav
  namespace: arr
  labels:
    app.kubernetes.io/name: nzbdav
    app.kubernetes.io/part-of: arr
spec:
  selector:
    app.kubernetes.io/name: nzbdav
    app.kubernetes.io/part-of: arr
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
